[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/Countdown_timer/Main_Timer.gd" type="Script" id=1]
[ext_resource path="res://src/Countdown_timer/PauseMenuLayer.gd" type="Script" id=2]
[ext_resource path="res://assets/Pausemenu.png" type="Texture" id=3]
[ext_resource path="res://assets/resumebarbt.png" type="Texture" id=4]
[ext_resource path="res://assets/exitbt.png" type="Texture" id=5]
[ext_resource path="res://assets/bgmbt.png" type="Texture" id=6]
[ext_resource path="res://assets/restartbarbt.png" type="Texture" id=7]
[ext_resource path="res://assets/volumncontrolbt.png" type="Texture" id=8]
[ext_resource path="res://assets/pausebt.png" type="Texture" id=9]
[ext_resource path="res://src/Countdown_timer/BgmOnOffbtn.gd" type="Script" id=14]
[ext_resource path="res://assets/Scorelabe_dynamicfont.tres" type="DynamicFont" id=17]

[node name="NYbackground" type="ColorRect"]
pause_mode = 1
anchor_right = 0.992
anchor_bottom = 0.987
margin_right = -624.64
margin_bottom = -345.96
color = Color( 0.988235, 0.690196, 0.913725, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Main_Timer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pausegameinbtn" type="TextureButton" parent="Main_Timer"]
margin_left = 16.0
margin_top = 24.0
margin_right = 126.0
margin_bottom = 136.0
size_flags_horizontal = 15
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="time_label" type="Label" parent="Main_Timer"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 0.061
margin_left = 432.0
margin_top = 16.0
margin_right = -637.0
margin_bottom = -13.92
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 17 )
custom_colors/font_color = Color( 0.509804, 0.168627, 0.168627, 1 )
custom_constants/shadow_offset_y = 2
text = "0"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_timer" type="Timer" parent="Main_Timer"]
pause_mode = 1
wait_time = 30.0
autostart = true

[node name="PauseMenuLayer" type="Control" parent="."]
pause_mode = 2
margin_right = 1280.0
margin_bottom = 720.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="PauseMenuLayer"]
anchor_right = 1.008
anchor_bottom = 1.0
margin_right = -10.24
color = Color( 0.0666667, 0.054902, 0.0627451, 0.745098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause메뉴화면" type="Sprite" parent="PauseMenuLayer/BlackOverlay"]
pause_mode = 2
position = Vector2( 638.236, 382.482 )
scale = Vector2( 0.953547, 0.851991 )
texture = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenuLayer/BlackOverlay/Pause메뉴화면"]
anchor_left = 0.195
anchor_top = 0.181
anchor_right = 0.899
anchor_bottom = 0.429
margin_left = -240.75
margin_top = -297.202
margin_right = -250.55
margin_bottom = -303.418
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
custom_constants/separation = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BgmOnOffbtn" type="TextureButton" parent="PauseMenuLayer/BlackOverlay/Pause메뉴화면/HBoxContainer"]
margin_right = 142.0
margin_bottom = 153.0
size_flags_horizontal = 12
size_flags_vertical = 15
size_flags_stretch_ratio = 3.75
texture_normal = ExtResource( 6 )
script = ExtResource( 14 )

[node name="VolumnControlbtn" type="TextureButton" parent="PauseMenuLayer/BlackOverlay/Pause메뉴화면/HBoxContainer"]
margin_left = 142.0
margin_right = 307.0
margin_bottom = 153.0
size_flags_horizontal = 12
size_flags_vertical = 12
texture_normal = ExtResource( 8 )
stretch_mode = 2

[node name="PauseControlMenu" type="VBoxContainer" parent="PauseMenuLayer/BlackOverlay/Pause메뉴화면"]
pause_mode = 2
anchor_left = -0.772
anchor_top = -0.149
anchor_right = 2.066
anchor_bottom = 1.198
margin_left = 238.4
margin_top = 51.658
margin_right = -816.7
margin_bottom = -514.116
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resumebtn" type="Button" parent="PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu"]
margin_right = 222.0
margin_bottom = 97.0
icon = ExtResource( 4 )
flat = true

[node name="Restartbtn" type="Button" parent="PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu"]
margin_top = 101.0
margin_right = 222.0
margin_bottom = 198.0
icon = ExtResource( 7 )
flat = true

[node name="Exitbtn" type="Button" parent="PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu"]
margin_top = 202.0
margin_right = 222.0
margin_bottom = 299.0
icon = ExtResource( 5 )
flat = true
[connection signal="pressed" from="Main_Timer/Pausegameinbtn" to="PauseMenuLayer" method="_on_Pausegameinbtn_pressed"]
[connection signal="pressed" from="PauseMenuLayer/BlackOverlay/Pause메뉴화면/HBoxContainer/BgmOnOffbtn" to="PauseMenuLayer" method="_on_BgmOnOffbtn_pressed"]
[connection signal="button_up" from="PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu/Resumebtn" to="PauseMenuLayer" method="_on_Resumebtn_button_up"]
[connection signal="pressed" from="PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu/Resumebtn" to="PauseMenuLayer" method="_on_Resumebtn_pressed"]
[connection signal="button_up" from="PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu/Restartbtn" to="PauseMenuLayer" method="_on_Restartbtn_button_up"]
[connection signal="button_up" from="PauseMenuLayer/BlackOverlay/Pause메뉴화면/PauseControlMenu/Exitbtn" to="PauseMenuLayer" method="_on_Exitbtn_button_up"]
